gitlab/gitlab-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
  annotations:
  #  ingress.kubernetes.io/body-size: 200m
  #  ingress.kubernetes.io/affinity: "true"
  #  ingress.kubernetes.io/session-cookie-name: "fuckoff"
  #   ingress.kubernetes.io/upstream-fail-timeout: "30"
  #   ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
  - http:
      paths:
      - path: / 
        backend:
          serviceName: gitlab
          servicePort: 80
